On smaller screens a nav menu opens on click to reveal the nav items. Is correctly hidden and displayed when screen size is changed

--- a/app/assets/stylesheets/buttons.scss
+++ b/app/assets/stylesheets/buttons.scss
@@ -8,6 +8,7 @@
 }
 
 .btn {
+  display: inline-block;
   font-weight: 600;
   font-size: 14px;
   padding: 0.75rem 2rem;
